--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Mereka juga dapat berkomunikasi dengan penyandang tunanetra
     menggunakan fitur mengubah teks menjadi suara.">
     <meta name="theme-color" content="#d6e4f3" >
+    <meta name="dicoding:email" content="ysf.sugiono@gmail.com">
     <link rel="stylesheet" href="assets/style.min.css" />
     <link rel="icon" href="assets/favicon.ico" />
     <link rel="manifest" href="manifest.json">
